Fixed css to display progress bars and proper alignment of file previews.

--- a/mockup/patterns/upload/less/pattern.upload.less
+++ b/mockup/patterns/upload/less/pattern.upload.less
@@ -27,7 +27,7 @@
         }
         .previews{
             margin-top: 2em;
-            .item{ padding: 5px 0; }
+            .item{ padding: 5px 0; clear: both; }
             .title{ padding-left: 0; }
             .info img {
                 width: 32px;
@@ -61,6 +61,12 @@
     .upload .dz-preview .dz-details .dz-size,
     .upload-previews .dz-preview .dz-details .dz-size{
         font-size: 11px;
+    }
+    .dz-upload {
+        background-color: red;
+        height: 10px;
+        display: block;
+        width: 0%;
     }
     .dz-max-files-reached {}
 }
